# CS249A_Sim_To_Real_Project

./: .gitignore  .gitmodules  test_script.py
AI_DOCUMENTS/: webots_io_contract.md  webots_robotics_integration.md
assets/maps/dSPACE/: LagunaSeca.xodr  Laguna_Seca.rd
examples/webots/robotics/: README.md  line_following.scenic  obstacle_avoidance.scenic  pololu.scenic  simple_robot.scenic  test_integration.py
examples/webots/robotics/webots_data/controllers/scenic_supervisor/: scenic_supervisor.py
examples/webots/robotics/webots_data/controllers/simple_robot_controller/: simple_robot_controller.py
examples/webots/robotics/webots_data/worlds/: line_following.wbt  obstacle_avoidance.wbt  pololu.wbt  simple_robot.wbt
mocap/: README.md  mocap.py  mocap_control.py  mocap_estimator.py
mocap/PythonClient/: NatNetClient.py
pololu/: bluetooth_mac.py
pololu-3pi-2040/: CMakeLists.txt  README.md
pololu-3pi-2040/LinguaFranca/: RobotMeasureSpeed.lf
pololu-3pi-2040/src/: blink.c  motors_test.c
pololu-bluetooth-testing/: CMakeLists.txt  bluetooth_pololu.c
src/scenic/domains/robotics/: __init__.py  actions.py  behaviors.scenic  model.scenic
src/scenic/simulators/webots/: robotics_model.scenic  simulator.py
